syntax = "proto3";

option go_package = "./user_proto";

package user_proto;

service User {
  rpc GetSession(Request) returns (Response) {}
}

message Request {
  string token = 1;
}

message Response {
  int32 user_id = 1;
  bool is_banned = 2;
  repeated string permissions = 3;
}